--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yuriy Kochura"
-  avatar           : "profile.png"
+  avatar           : "II2.jpg"
   bio              : "Ph.D. student at the National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”"
   location         : "Kiev, Ukraine"
   employer         :
