--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yuriy Kochura / Test"
+title                    : "Home"
 title_separator          : "-"
 name                     : &name "Yuriy Kochura"
 description              : &description "personal description"
@@ -83,7 +83,7 @@ author:
   name             : "Yuriy Kochura"
   avatar           : "II2.jpg"
   bio              : "Ph.D. student at the National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”"
-  location         : "Kiev, Ukraine"
+  location         : "Kyiv, Ukraine"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=YucKNtAAAAAJ"
@@ -102,7 +102,8 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/yuriy-kochura-615364119/"
+  dblp             : "https://dblp.uni-trier.de/pers/hd/k/Kochura:Yuriy"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
