--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yuriy-kochura-615364119/"
+  linkedin         : "www.linkedin.com/in/yuriy-kochura"
   dblp             : "https://dblp.uni-trier.de/pers/hd/k/Kochura:Yuriy"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
