--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  theme            : jekyll-theme-minimal
 
 
 # Reading Files
