--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=YucKNtAAAAAJ"
-  email            :
+  email            : "iuriy.kochura@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Yuriy_Kochura"
   uri              :
   bitbucket        :
